--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,3 @@
-sms:
-  url: https://api.sms-activate.org/stubs/handler_api.php
-  apikey: 77916d204A44fc5e89A8f5d9742ff70b
+spring:
+  profiles:
+    active: dev
