--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,11 @@
             <version>8.0.29</version>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.16</version>
+        </dependency>
     </dependencies>
 
     <build>
