--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+server:
+  port: 8000
+sms:
+  url: https://api.sms-activate.org/stubs/handler_api.php
+  apikey: defbA8A663b7676818d1Ad0cdb550251
 spring:
-  profiles:
-    active: dev
+  datasource:
+    url: jdbc:mysql://localhost:3306/register
+    username: root
+    password: 1234
